--- a/pages/index.css
+++ b/pages/index.css
@@ -143,6 +143,9 @@
   background-size: cover;
   padding: 100px 80px 215px;
   color: #ffffff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .recipes__title {
@@ -175,10 +178,10 @@
 
 .recipes__video-item {
   display: flex;
-  width: 400%;
+  width: 100%;
+  border: 0;
   column-gap: 40px;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
 }
 
 .recipes__iframe {
