--- a/pages/index.css
+++ b/pages/index.css
@@ -201,3 +201,98 @@
   font-size: 20px;
   line-height: 30px;
 }
+
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.reservation__title {
+  display: flex;
+  flex-direction: center;
+  padding-top: 100px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin: 0px auto 80px;
+}
+
+.reservation__form {
+  max-width: 385px;
+  margin: 0% auto 120px;
+  padding-top: 80px;
+  outline: none;
+  border: none;
+}
+
+.form__fielset {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+.form__label {
+  margin-bottom: 8px;
+  display: block;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__input {
+  display: flex;
+  flex: center;
+  margin: 0 0 32px;
+  flex-direction: column;
+  border-radius: 4px;
+  height: 60px;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 15px 20px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  border-color: #838383;
+  outline: none;
+}
+
+.form__button {
+  margin-bottom: 32px;
+  height: 60px;
+  display: flex;
+  border-radius: 4px;
+  padding: 0 100px;
+  max-width: 385px;
+  box-sizing: border-box;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #2f80ed;
+  color: #ffffff;
+  outline: none;
+  border: none;
+  text-align: center;
+}
+
+.form__fieldset-checkbox {
+  border-radius: 2px;
+  padding: 20px 20px;
+  margin-left: 12px;
+  outline: none;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
