--- a/pages/index.css
+++ b/pages/index.css
@@ -233,11 +233,12 @@
   border: none;
 }
 
-.form__fielset {
+.form__fieldset {
   border: none;
   padding: 0;
   margin: 0;
 }
+
 .form__label {
   margin-bottom: 8px;
   display: block;
@@ -270,13 +271,10 @@
 .form__button {
   margin-bottom: 32px;
   height: 60px;
-  display: flex;
+  width: 100%;
   border-radius: 4px;
-  padding: 0 100px;
-  max-width: 385px;
   box-sizing: border-box;
   font-family: Inter;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
@@ -287,12 +285,23 @@
   text-align: center;
 }
 
+.form__button:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
 .form__fieldset-checkbox {
-  border-radius: 2px;
-  padding: 20px 20px;
-  margin-left: 12px;
-  outline: none;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 12px;
+  border: none;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.form__fieldset-checkbox input {
+  width: 20px;
+  height: 20px;
+  border-radius: 2px;
 }
