--- a/pages/index.css
+++ b/pages/index.css
@@ -1,306 +1,8 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  background-color: #ffffff;
-  background-image: url("../images/background_header.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  display: flex;
-  position: relative;
-  width: 105px;
-  height: 39px;
-  left: 30px;
-  top: 30px;
-  margin-bottom: 183px;
-}
-
-.nav__links {
-  margin-top: 30px;
-  margin-right: 80px;
-  display: flex;
-  gap: 20px;
-}
-
-.nav__link {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-  text-decoration: none;
-}
-
-.header__title {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  max-width: 709px;
-  left: 80px;
-  margin-top: 183px;
-}
-.span-accent {
-  display: flex;
-  left: 80px;
-  font-family: Noto Serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__title_subtitle {
-  display: flex;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: 1px;
-  left: 80px;
-}
-
-.header__description {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-top: 28px;
-  max-width: 683px;
-  left: 80px;
-  font-family: Noto Serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  display: flex;
-  position: absolute;
-  flex-direction: column;
-  top: 124px;
-  width: 646px;
-  height: 568px;
-  right: 5px;
-}
-
-.header__footer {
-  color: #6f6f6f;
-}
-
-.header__time {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  left: 80px;
-  bottom: 40px;
-}
-
-.header__paragraph {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin: 0;
-}
-
-.header__address {
-  display: flex;
-  margin-top: auto;
-  position: absolute;
-  right: 80px;
-  bottom: 20px;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px 80px 215px;
-  color: #ffffff;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.recipes__title {
-  max-width: 580px;
-  padding-top: 100px;
-  margin-left: 80px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  padding-top: 24px;
-  margin-left: 80px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  margin: 80px auto 215px;
-}
-
-.recipes__video-item {
-  display: flex;
-  width: 100%;
-  border: 0;
-  column-gap: 40px;
-  justify-content: space-between;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  border: 0;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-  align-items: center;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.reservation__title {
-  display: flex;
-  justify-content: center;
-  padding-top: 100px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin: 0px auto 80px;
-}
-
-.reservation__form {
-  max-width: 385px;
-  margin: 0% auto 120px;
-  padding-top: 80px;
-  outline: none;
-  border: none;
-}
-
-.form__fieldset {
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-.form__label {
-  margin-bottom: 8px;
-  display: block;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__input {
-  display: flex;
-  flex-direction: column;
-  margin: 0 0 32px;
-  border-radius: 4px;
-  height: 60px;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  border-color: #838383;
-  outline: none;
-}
-
-.form__button {
-  margin-bottom: 32px;
-  height: 60px;
-  width: 100%;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-family: Inter;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #2f80ed;
-  color: #ffffff;
-  outline: none;
-  border: none;
-  text-align: center;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-  cursor: pointer;
-}
-
-.form__fieldset-checkbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-  border: none;
-  padding: 0;
-  margin: 0 auto;
-}
-
-.form__fieldset-checkbox input {
-  width: 20px;
-  height: 20px;
-  border-radius: 2px;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/footers.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/form.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
