--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,4 @@
 @import url("../blocks/form.css");
 @import url("../blocks/recipes.css");
 @import url("../blocks/reservation.css");
-@import url("../blocks/accent.css");
+@import url("../blocks/span.css");
